--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </p>
         <div class="banner-btn">
           <a href="https://chuckie-nt.github.io/superidol105/"><span></span>Our Journey</a>
-          <a href="https://chuckie-nt.github.io/superidol105-c/"><span></span>About Us</a>
+          <a href="https://chuckie-nt.github.io/superidol105c/"><span></span>About Us</a>
         </div>
       </div>
     </section>
